--- a/defualt.html
+++ b/defualt.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div style="background-color:lightslategrey">
-<img src="pattern.png" height="500px" width="100%" alt="Flowers in Chania">
+<img src="pattern.png" height="500px" width="100%" alt="pattern image">
 </div>
 
 <div class="poly">sdadsdas</div>
