--- a/defualt.html
+++ b/defualt.html
@@ -22,6 +22,6 @@
 <img src="pattern.png" height="500px" width="100%" alt="pattern image">
 </div>
 
-<div class="poly">I am polygon</div>
+<div class="poly">This is polygon</div>
 </body>
 </html>
